--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
+  box-sizing: border-box;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: #f9fafc;
+}
+
+.content {
   display: flex;
   flex-direction: column;
+  padding: 32px;
+}
+
+.header {
+  background-color: #111827;
+  padding: 10px;
+}
+
+.default-input {
+  margin-top: 8px;
+  padding: 6px 12px;
+  border-radius: 3px;
+  border: 1px solid #dcdfe4;
+  background-color: #fff;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.navbar-left {
+  display: flex;
+  color: #ffffff;
+  font-size: 24px;
   align-items: center;
+}
+
+.navbar-right {
+  display: flex;
+}
+
+.register-link {
+  text-decoration: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  font-weight: 400;
+}
+
+.register-header {
+  display: flex;
+  align-items: center;
+}
+
+.form {
+  display: flex;
+  padding: 16px;
+}
+
+.container-title {
+  font-size: 16px;
+  color: #111827;
+  font-size: 24px;
+  margin: 0;
+}
+
+.svg-inline--fa {
+  margin-right: 10px;
+}
+
+.form-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+
+.button-wrapper {
+  display: flex;
+}
+
+.form-button {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: none;
+  border-radius: 2px;
+  padding: 10px;
+  margin-right: 8px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.button-primary {
+  background-color: #5048e5;
+  color: #ffffff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-input {
+  min-width: 250px;
+  padding: 8px 12px;
+}
+
+.search-button {
+  padding: 9px 13px;
+  border: 1px solid;
+  border-radius: 4px;
+  margin-left: 8px;
+  cursor: pointer;
+}
+
+.search-button .svg-inline--fa {
+  margin-right: 0px;
+}
+
+.carlist-table {
+  border-collapse: collapse;
+  margin-top: 16px;
+}
+
+.carlist-table th {
+  text-align: left;
+  background-color: #f3f4f6;
+  padding: 12px 16px;
+  font-weight: 500;
+}
+
+.carlist-table td {
+  padding: 16px;
+  border-bottom: 1px solid #f3f4f6;
+}
+
+.carlist-table tr:last-child td {
+  border: none;
 }
